[package]
name = "marshrutka-gw"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "zstd", "deflate", "stream"] }
rustls-acme = { version = "0.11", features = ["tokio", "axum"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
