[package]
name = "marshrutka-gw"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2", "macros"] }
axum-extra = "0.10"
axum-response-cache = "0.3"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive"] }
malloc-best-effort = "0.1"
reqwest = { version = "0.12", features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "stream",
    "rustls-tls-webpki-roots",
    "http2",
    "charset"
], default-features = false }
rustls-acme = { version = "0.13", features = ["tokio", "axum"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
